--- a/config/paths.yaml
+++ b/config/paths.yaml
@@ -34,3 +34,4 @@ parameters:
     shopsys.elasticsearch.structure_dir: '%shopsys.resources_dir%/definition/'
     shopsys.json_entrypoints_path: '%kernel.project_dir%/web/build/entrypoints.json'
     shopsys.migrations_dir: '%shopsys.web_dir%/%shopsys.content_dir_name%/uploadedFiles/migrations'
+    shopsys.var_dir: '/var'
