Two PDFs with certificates are now generated. One in colors and second in greyscale.

--- a/config/uploaded_files.yaml
+++ b/config/uploaded_files.yaml
@@ -7,7 +7,7 @@
     class: App\Model\Order\GiftCertificate\OrderGiftCertificate
     types:
         -   name: default
-            multiple: false
+            multiple: true
 -   name: product
     class: App\Model\Product\Product
     types:
