[TF-977] Temp file upload uses abstract filesystem - see https://github.com/shopsys/shopsys/pull/1955

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -95,7 +95,7 @@ services:
                 - '@snc_redis.session'
 
     App\Component\FileUpload\FileUpload:
-        arguments: ['%kernel.cache_dir%', '%shopsys.uploaded_file_dir%', '%shopsys.image_dir%']
+        arguments: ['%shopsys.var_dir%', '%shopsys.uploaded_file_dir%', '%shopsys.image_dir%']
 
     Shopsys\FrameworkBundle\Component\FileUpload\FileUpload: '@App\Component\FileUpload\FileUpload'
 
