PohodaProductMapper: use extended ProductParameterValueDataFactory instead of the framework one
- added entry to services.yaml to ensure the extended class will be used even if the framework class was required

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -777,3 +777,5 @@ services:
         arguments:
             - '@shopsys.shop.twig.cache_provider'
             - '@shopsys.shop.twig.cache_strategy'
+
+    Shopsys\FrameworkBundle\Model\Product\Parameter\ProductParameterValueDataFactory: '@App\Model\Product\Parameter\ProductParameterValueDataFactory'
