--- a/composer.json
+++ b/composer.json
@@ -102,6 +102,7 @@
         "shopsys/read-model": "9.0.2",
         "simpod/sms-manager": "^0.1.0",
         "snc/redis-bundle": "^3.2.1",
+        "soukicz/zbozicz": "^1.1",
         "stof/doctrine-extensions-bundle": "^1.3.0",
         "symfony-cmf/routing": "^2.0.3",
         "symfony-cmf/routing-bundle": "^2.0.3",
