--- a/config/services.yaml
+++ b/config/services.yaml
@@ -700,7 +700,9 @@ services:
     Shopsys\FrameworkBundle\Component\Router\DomainRouter: '@App\Component\Router\DomainRouter'
 
     App\Component\Router\DomainRouterFactory:
-        arguments: ['%router.resource%']
+        arguments:
+            $routerConfiguration: '%router.resource%'
+            $cacheDir: '%kernel.cache_dir%'
 
     Shopsys\FrameworkBundle\Component\Router\DomainRouterFactory: '@App\Component\Router\DomainRouterFactory'
 
