--- a/config/images.yaml
+++ b/config/images.yaml
@@ -116,6 +116,8 @@
                     height: 100
                     crop: false
                     occurrence: 'Front-end: On top of product''s main photo'
+                    additionalSizes:
+                        - {width: 100, height: 100, media: "(min-width: 480px) and (max-width: 768px)"}
 
 -   name: sliderItem
     class: Shopsys\FrameworkBundle\Model\Slider\SliderItem
