[TF-829] Legacy product URLs from old eshop redirect

--- a/config/services/commands.yaml
+++ b/config/services/commands.yaml
@@ -35,3 +35,7 @@ services:
     App\Command\Migrations\ImportLegacySeoAttributesFromCSVCommand:
         arguments:
             $shopsysMigrationsDirPath: '%shopsys.migrations_dir%'
+
+    App\Command\Migrations\ImportLegacyProductUrlsCommand:
+        arguments:
+            $shopsysMigrationsDirPath: '%shopsys.migrations_dir%'
