[TF-830] Migrate legacy URLs from SEO table
- CSV is generated from Google Spreadsheet
- https://docs.google.com/spreadsheets/u/1/d/1FycnNrfdeh8g-DQeipViLvEQ_XDJ_yCPLdjWNlSDFxI

--- a/config/services/commands.yaml
+++ b/config/services/commands.yaml
@@ -39,3 +39,7 @@ services:
     App\Command\Migrations\ImportLegacyProductUrlsCommand:
         arguments:
             $shopsysMigrationsDirPath: '%shopsys.migrations_dir%'
+
+    App\Command\Migrations\ImportOtherLegacyUrlsCommand:
+        arguments:
+            $shopsysMigrationsDirPath: '%shopsys.migrations_dir%'
