--- a/easy-coding-standard.yml
+++ b/easy-coding-standard.yml
@@ -119,11 +119,13 @@ parameters:
             - '*/src/Model/Transfer/Issue/TransferIssue.php'
             - '*/src/Model/Order/Item/OrderItem.php'
             - '*/src/Model/Product/Product.php'
+            - '*/src/Model/Url/Migration/LegacyUrlMigrationIssue.php'
 
         PHP_CodeSniffer\Standards\PSR2\Sniffs\Methods\FunctionCallSignatureSniff.Indent: ~
 
         SlevomatCodingStandard\Sniffs\Classes\UnusedPrivateElementsSniff.UnusedProperty:
             - '*/src/Model/Transfer/Issue/TransferIssue.php'
+            - '*/src/Model/Url/Migration/LegacyUrlMigrationIssue.php'
 
         PHP_CodeSniffer\Standards\Generic\Sniffs\Metrics\CyclomaticComplexitySniff:
             - '*/src/Model/Cart/CartFacade.php'
