[TF-836] Now generate button trigers feed cron module

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -74,6 +74,7 @@ security:
         - { path: ^/admin/$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin/authorization/$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin/schedule/import-categories, roles: ROLE_ADMIN }
+        - { path: ^/admin/schedule/mergado-feed, roles: ROLE_SUPER_ADMIN }
 
         # Marketing
         - { path: ^/admin/article, roles: ROLE_VIEW_MARKETING }
