--- a/config/routes/shopsys_front.yaml
+++ b/config/routes/shopsys_front.yaml
@@ -12,6 +12,11 @@ front_cart_box:
     path: /cart/box/
     defaults: { _controller: App\Controller\Front\CartController:boxAction }
 
+front_cart_content:
+    path: /cart/box-content/
+    defaults: { _controller: App\Controller\Front\CartController:boxContentAction }
+    condition: "request.isXmlHttpRequest()"
+
 front_cart_delete:
     path: /cart/delete/{cartItemId}/
     defaults: { _controller: App\Controller\Front\CartController:deleteAction }
