[TF-1109] Add @tropicliberec.cz and @tropicfishing.cz to mail delivery whitelist

--- a/config/parameters.yaml.dist
+++ b/config/parameters.yaml.dist
@@ -15,7 +15,10 @@ parameters:
     mailer_password: ~
     mailer_disable_delivery: false
     mailer_master_email_address: no-reply@shopsys.com
-    mailer_delivery_whitelist: [/@shopsys\.com$/]
+    mailer_delivery_whitelist:
+        - /@shopsys\.com$/
+        - /@tropicliberec\.cz/
+        - /@tropicfishing\.cz/
 
     secret: ThisTokenIsNotSoSecretChangeIt
     trusted_proxies:
