ProductVisibilityFacade is not an event listener anymore
- we do not want to recalculate the products visibility on kernel response to avoid possible deadlocks
- removed unnecessary calls of refreshProductsVisibilityForMarkedDelayed() method from ProductFacade
- now, the product is just marked for visibility recalculation - it is processed in CRON

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -797,3 +797,5 @@ services:
     App\Controller\Front\ScriptController:
         arguments:
             $shopId: '%zbozi_shop_id%'
+
+    Shopsys\FrameworkBundle\Model\Product\ProductVisibilityFacade: ~
