--- a/config/services.yaml
+++ b/config/services.yaml
@@ -799,3 +799,8 @@ services:
             $shopId: '%zbozi_shop_id%'
 
     Shopsys\FrameworkBundle\Model\Product\ProductVisibilityFacade: ~
+
+    Shopsys\FrameworkBundle\Model\Product\Availability\ProductAvailabilityRecalculator:
+        class: App\Model\Product\Availability\ProductAvailabilityRecalculator
+        tags:
+            - { name: kernel.event_listener, event: kernel.response, method: onKernelResponse }
