Importing external stock quantities to product

--- a/config/services/cron_products.yaml
+++ b/config/services/cron_products.yaml
@@ -14,6 +14,10 @@ services:
             - { name: shopsys.cron, hours: '0', minutes: '30', readableName: 'Přepočet viditelností produktů (všechny produkty)', instanceName: products }
 
     # ALWAYS -----------------------------------------------------------------------------------------
+    App\Model\Product\Transfer\ProductExternalStockQuantityImportCronModule:
+        tags:
+            - { name: shopsys.cron, hours: '*', minutes: '*', readableName: 'Import skladových zásob externího skladu z Pohoda IS', instanceName: products }
+
     App\Model\Product\Transfer\ProductImportCronModule:
         tags:
             - { name: shopsys.cron, hours: '*', minutes: '*', readableName: 'Import změněných produktů a zařazení produktů do kategorií z Pohoda IS', instanceName: products }
