--- a/config/services/cron_orders.yaml
+++ b/config/services/cron_orders.yaml
@@ -13,6 +13,10 @@ services:
         tags:
             - { name: shopsys.cron, hours: '*', minutes: '*/10', readableName: 'Export objednávek do služby Zbozi', instanceName: orders }
 
+    App\Model\Heureka\HeurekaOrderExportCronModule:
+        tags:
+            - { name: shopsys.cron, hours: '*', minutes: '*/10', readableName: 'Export objednávek do služby Heureka', instanceName: orders }
+
     App\Model\Order\Transfer\Status\OrderStatusImportCronModule:
         tags:
             - { name: shopsys.cron, hours: '*', minutes: '*', readableName: 'Import stavů objednávek z IS Pohoda', instanceName: orders }
