all the products recalculations afer it is sold out are moved outside the main request transaction to minimze the risk of a deadlock

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -810,3 +810,8 @@ services:
     Shopsys\FrameworkBundle\Component\Cron\CronFacade: '@App\Component\Cron\CronFacade'
 
     Shopsys\FrameworkBundle\Model\Product\Pricing\ProductPriceRecalculator: ~
+
+    # must be run after TransactionalMasterRequestListener so the recalculations are run outside the main request transaction
+    App\Model\Product\SoldOutActions\ProductSoldOutActionsListener:
+        tags:
+            - { name: kernel.event_listener, event: kernel.response, method: onKernelResponse, priority: -5 }
