--- a/config/parameters.yaml.dist
+++ b/config/parameters.yaml.dist
@@ -44,9 +44,9 @@ parameters:
             clientSecret: XEDsTGrR
             language: SK
         en:
-            goid: 8111408481
-            clientId: 1437261089
-            clientSecret: acdDPRSW
+            goid: 8646591998
+            clientId: 1444786871
+            clientSecret: XEDsTGrR
             language: EN
         isProductionMode: false
         scope: payment-all
