Moved Google Translations cron to images cron instance.

--- a/config/services/cron_images.yaml
+++ b/config/services/cron_images.yaml
@@ -7,3 +7,7 @@ services:
     App\Model\Product\Transfer\ProductImageImportCronModule:
         tags:
             - { name: shopsys.cron, hours: '*', minutes: '*', readableName: 'Import obrázků k produktům z Pohoda IS', instanceName: images }
+
+    App\Model\Product\Translation\ProductTranslationCronModule:
+        tags:
+            - { name: shopsys.cron, hours: '*', minutes: '*', readableName: 'Automatický překlad produktů přes Google Translate', instanceName: images }
