--- a/config/services.yaml
+++ b/config/services.yaml
@@ -253,6 +253,10 @@ services:
     App\Model\GoPay\PaymentMethod\GoPayPaymentMethodFacade:
         public: true
 
+    App\Model\Product\ProductFacade:
+        arguments:
+            - '@monolog.logger.cron'
+
     Shopsys\FrameworkBundle\Model\Product\ProductFacade: '@App\Model\Product\ProductFacade'
 
     Shopsys\FrameworkBundle\Model\Product\ProductRepository: '@App\Model\Product\ProductRepository'
@@ -829,3 +833,9 @@ services:
     App\Model\Product\Elasticsearch\ProductIndex: ~
 
     Shopsys\FrameworkBundle\Model\Product\Elasticsearch\ProductIndex: '@App\Model\Product\Elasticsearch\ProductIndex'
+
+    App\Model\Product\Elasticsearch\MarkProductForExportSubscriber:
+        arguments:
+            - '@monolog.logger.cron'
+
+    Shopsys\FrameworkBundle\Model\Product\Elasticsearch\MarkProductForExportSubscriber: '@App\Model\Product\Elasticsearch\MarkProductForExportSubscriber'
