--- a/config/services.yaml
+++ b/config/services.yaml
@@ -843,3 +843,17 @@ services:
         tags:
             - { name: kernel.event_listener, event: kernel.exception, method: onKernelException, priority: 5}
 
+    shopsys.framework.cache_driver.annotations_cache:
+        class: Doctrine\Common\Cache\ChainCache
+        arguments:
+            -
+                - '@shopsys.framework.cache_driver.annotations_cache.array_cache'
+                - '@shopsys.framework.cache_driver.annotations_cache.permanent_php_file_cache'
+
+    shopsys.framework.cache_driver.annotations_cache.array_cache:
+        class: Doctrine\Common\Cache\ArrayCache
+
+    shopsys.framework.cache_driver.annotations_cache.permanent_php_file_cache:
+        class: Doctrine\Common\Cache\PhpFileCache
+        arguments:
+            - '%kernel.cache_dir%/annotations'
