--- a/config/services.yaml
+++ b/config/services.yaml
@@ -859,3 +859,5 @@ services:
             - '%kernel.cache_dir%/annotations'
 
     Shopsys\FrameworkBundle\Model\Order\Listing\OrderListAdminRepository: '@App\Model\Order\Listing\OrderListAdminRepository'
+
+    Shopsys\FrameworkBundle\Model\Feed\FeedFacade: '@App\Model\Feed\FeedFacade'
