import of images is now not run at the times when the export of orders is scheduled

--- a/config/services/cron_images.yaml
+++ b/config/services/cron_images.yaml
@@ -6,7 +6,7 @@ services:
 
     App\Model\Product\Transfer\ProductImageImportCronModule:
         tags:
-            - { name: shopsys.cron, hours: '*', minutes: '*', readableName: 'Import obrázků k produktům z Pohoda IS', instanceName: images }
+            - { name: shopsys.cron, hours: '*', minutes: '5,10,20,25,35,40,50,55', readableName: 'Import obrázků k produktům z Pohoda IS', instanceName: images }
 
     App\Model\Product\Translation\ProductTranslationCronModule:
         tags:
