[TF-1360] Coupon codes search

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -877,3 +877,5 @@ services:
     Shopsys\FrameworkBundle\Model\Product\Search\AggregationResultToProductFilterCountDataTransformer: '@App\Model\Product\Search\AggregationResultToProductFilterCountDataTransformer'
 
     Shopsys\FrameworkBundle\Model\Product\Search\ProductFilterDataToQueryTransformer: '@App\Model\Product\Search\ProductFilterDataToQueryTransformer'
+
+    App\Model\AdvancedSearchPromoCode\PromoCodeListAdminFacade: ~
