--- a/composer.json
+++ b/composer.json
@@ -63,6 +63,7 @@
         "dompdf/dompdf": "^0.8.5",
         "elasticsearch/elasticsearch": "^7.6.1",
         "emanueleminotto/twig-cache-bundle": "1.0.5",
+        "enlightn/security-checker": "^1.3",
         "fp/jsformvalidator-bundle": "1.6.1",
         "friendsofsymfony/ckeditor-bundle": "^2.1",
         "fzaninotto/faker": "^1.7.1",
@@ -90,7 +91,6 @@
         "prezent/doctrine-translatable-bundle": "^1.0.3",
         "psr/log": "~1.0.2",
         "sensio/framework-extra-bundle": "^5.2",
-        "sensiolabs/security-checker": "^6.0",
         "shopsys/cdn": "^1.0.1",
         "shopsys/doctrine-orm": "^2.7.2",
         "shopsys/form-types-bundle": "9.0.2",
@@ -161,7 +161,8 @@
         "post-update-cmd": [
             "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
             "App\\Environment::checkEnvironment",
-            "@auto-scripts"
+            "@auto-scripts",
+            "@security-check"
         ],
         "auto-scripts": {
             "php phing clean": "script",
