Fixed spam of deprecation warnings during tests on CI.

--- a/config/services/commands.yaml
+++ b/config/services/commands.yaml
@@ -6,6 +6,7 @@ services:
 
     App\Command\:
         resource: '../../src/Command'
+        exclude: '../../src/Command/ExtendedClassesAnnotationsCommand.php'
 
     App\Command\ExtendedClassesAnnotationsCommand:
         arguments:
