--- a/config/images.yaml
+++ b/config/images.yaml
@@ -77,11 +77,6 @@
             occurrence: 'Front-end: Listing of products in section, listing of products on special offer'
             additionalSizes:
                 - {width: 520, height: 520, media: "(-webkit-min-device-pixel-ratio: 2) and (min-resolution: 192dpi)"}
-        -   name: listSet
-            width: 128
-            height: 128
-            crop: false
-            occurrence: 'Front-end: Listing of products in sets'
         -   name: listSlider
             width: 240
             height: 160
@@ -102,6 +97,11 @@
             height: 90
             crop: false
             occurrence: 'Front-end: gift on product detail and list in products bomb'
+        -   name: bigThumbnail
+            width: 128
+            height: 128
+            crop: false
+            occurrence: 'Front-end: Listing of products in sets, product image of tip category'
         -   name: mediumThumbnail
             width: 70
             height: 70
