--- a/config/services/cron_products.yaml
+++ b/config/services/cron_products.yaml
@@ -39,6 +39,9 @@ services:
         tags:
             - { name: shopsys.cron, hours: '*', minutes: '*', readableName: "Export změněných produktů do Elasticsearch", instanceName: products }
 
+    App\Model\LuigisBox\LuigisBoxCronModule:
+        tags:
+            - { name: shopsys.cron, hours: '*', minutes: '*', readableName: 'Aktualizace označených objektů v Luigi''s Box', instanceName: products }
 
 #    App\Model\Product\Mall\MallProductExportCronModule:
 #        tags:
