[Gitlab CI] Use integrated Kubernetes cluster for deployment

--- a/gitlab/gitlab-ci.yml
+++ b/gitlab/gitlab-ci.yml
@@ -23,7 +23,6 @@ stages:
     script:
         - docker create -ti --name image ${TAG} bash
         - docker cp image:/var/www/html/var/ ./
-        - echo "${KUBE_CONFIG}" > /root/.kube/config
         - chmod +x ./deploy/deploy-project.sh && ./deploy/deploy-project.sh deploy
 
 variables:
@@ -111,8 +110,6 @@ review:stop:
 deploy:production:
     <<: *deploy
     resource_group: deploy_production
-    variables:
-        KUBE_CONFIG: ${KUBE_CONFIG_PROD}
     rules:
         -   if: '$CI_PIPELINE_SOURCE == "schedule"'
             when: never
@@ -122,12 +119,12 @@ deploy:production:
     environment:
         name: production
         url: https://${DOMAIN_HOSTNAME_1}
+        kubernetes:
+            namespace: ${PROJECT_NAME}
 
 deploy:devel:
     <<: *deploy
     resource_group: deploy_devel
-    variables:
-        KUBE_CONFIG: ${KUBE_CONFIG_DEVEL}
     rules:
         -   if: '$CI_PIPELINE_SOURCE == "schedule"'
             when: never
@@ -135,6 +132,8 @@ deploy:devel:
     environment:
         name: devel
         url: https://${DOMAIN_HOSTNAME_1}
+        kubernetes:
+            namespace: ${PROJECT_NAME}
 
 repository:clean:
     stage: service
