--- a/orchestration/kubernetes/configmap/nginx.yaml
+++ b/orchestration/kubernetes/configmap/nginx.yaml
@@ -106,7 +106,7 @@ data:
                     # VSHosting DNS
                     resolver                78.24.12.150;
                     proxy_intercept_errors  on;
-                    error_page              403 = @app;
+                    error_page              404 = @app;
 
                     proxy_http_version      1.1;
                     proxy_set_header        Authorization "";
@@ -119,7 +119,7 @@ data:
                     proxy_cache_background_update on;
                     proxy_cache_lock on;
 
-                    proxy_pass              https://s3.vshosting.cloud/{{PROJECT_NAME}}/web$request_uri;
+                    proxy_pass              https://shopsys-nas-minio.vshosting.cz:9000/{{PROJECT_NAME}}/web$request_uri;
                 }
 
                 location ~ ^/content(-test)?/images/ {
