Moved Luigi's Box cron from products instance.

--- a/config/services/cron_default.yaml
+++ b/config/services/cron_default.yaml
@@ -72,6 +72,10 @@ services:
         tags:
             - { name: shopsys.cron, hours: '*', minutes: '*', readableName: 'Smazání starých sazeb DPH' }
 
+    App\Model\LuigisBox\LuigisBoxCronModule:
+        tags:
+            - { name: shopsys.cron, hours: '*', minutes: '*', readableName: 'Aktualizace označených objektů v Luigi''s Box' }
+
     # ERROR PAGES ------------------------------------------------------------------------------------
     # This module should run as last because it creates multiple kernels and fake requests.
     Shopsys\FrameworkBundle\Component\Error\ErrorPageCronModule:
