--- a/config/packages/monolog.yaml
+++ b/config/packages/monolog.yaml
@@ -12,6 +12,11 @@ monolog:
             type: stream
             path: "%shopsys.log_stream%"
             level: debug
+        cron:
+            type: stream
+            path: "%shopsys.log_stream%"
+            channels: cron
+            level: debug
         slow:
             type: stream
             path: "%shopsys.log_stream%"
